# hs-coreutils

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  hs-coreutils.cabal  stack.yaml
.github/workflows/: haskell.yml  test.yml
src/: true.hs
src/false/: False.hs  main.hs
src/shellutils/false/: false.hs
src/shellutils/true/: true.hs
src/true/: True.hs  main.hs
test/false/: falseSpec.hs
test/shellutils/false/: falseSpec.hs
test/shellutils/true/: trueSpec.hs
test/true/: trueSpec.hs
