cabal-version:      2.4
name:               hs-coreutils
version:            0.1.0.0
synopsis:           coreutils written in haskell

-- A longer description of the package.
-- description:
homepage:           https://github.com/nao1215/hs-coreutils

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             CHIKAMATSU Naohiro
maintainer:         n.chika156@gmail.com

-- A copyright notice.
-- copyright:
category:           Development
extra-source-files:
    CHANGELOG.md
    README.md

executable true
    main-is:             src/true.hs
    build-depends:       base >=4.9,bytestring>=0.10.8.1
    default-language:    Haskell2010
    ghc-options:         -Wall -O3 -rtsopts